--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <font color="darkred">
-<body background="imag/butterfly.gif">
+<body background="butterfly.gif">
 <h1><marquee>Indice HTML</h1></marquee>
 <h2>Estrada Ramírez Samara Yamilet 2IM2</h2>
     <embed src="VIDEO1YOEDER.mp4" align="right" width="800" height="600">
