--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h2>ACTIVIDADES EN CLASE</h2>
         <li><a href="https://sxmyesrz.github.io/Estructura_b_y_texto/">Estructura b&aacutesica y texto</a><br></li><font>
 
-<li><a href="https://sxmyesrz.github.io/lis_y_lin/?authuser=0">Listas y lineas</a><br></li>
+<li><a href="https://sxmyesrz.github.io/lis_y_lin/">Listas y lineas</a><br></li>
 
 <li><a href="https://sxmyesrz.github.io/Im-_y_multi/">Im&aacutegenes y multimedia</a><br></li>
 
