--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <li><a href="https://sxmyesrz.github.io/hip/">Hipervinculos</a><br></li>
 
 <li><a href="https://sxmyesrz.github.io/tab/">Tablas</a><br></li>
+
+<li><a href="https://sxmyesrz.github.io/frame_vertical/">Frame vertical</a><br></li>
 <br>
         <h3>PRACTICAS</h3>
 <li><a hrf><a href="https://sxmyesrz.github.io/continentes/">Continentes</a><br></li></h3><br></li>
