--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
 
 <li><a href="https://sxmyesrz.github.io/tab/">Tablas</a><br></li>
 
+<li><a href="https://sxmyesrz.github.io/frame_horizontal/">Frame horizontal</a><br></li>
+            
 <li><a href="https://sxmyesrz.github.io/frame_vertical/">Frame vertical</a><br></li>
-<br>
+
+<li><a href="https://sxmyesrz.github.io/frame_combinado/">Frame combinado</a><br></li>
+
+<li><a href="https://sxmyesrz.github.io/menu_frames/">Menú frames</a><br></li>
+            <br>
         <h3>PRACTICAS</h3>
 <li><a hrf><a href="https://sxmyesrz.github.io/continentes/">Continentes</a><br></li></h3><br></li>
 
