--- a/index.html
+++ b/index.html
@@ -29,4 +29,6 @@
             <br>
         <h3>PRACTICAS</h3>
 <li><a hrf><a href="https://sxmyesrz.github.io/continentes/">Continentes</a><br></li></h3><br></li>
+            
+<li><a hrf><a href="https://sxmyesrz.github.io/frame_triangulos/">Frame tri&aacutengulos</a><br></li></h3><br></li>
 
