--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <font color="darkred">
 <body background="butterfly.gif">
-<h1><marquee>Indice HTML</h1></marquee>
+<h1> style="font-family: 'Comic Sans MS';"<marquee>Indice HTML</h1></marquee>
 <h2>Estrada Ramírez Samara Yamilet 2IM2</h2>
               </footer>
 <h2>ACTIVIDADES EN CLASE</h2>
@@ -31,4 +31,6 @@
 <li><a hrf><a href="https://sxmyesrz.github.io/continentes/">Continentes</a><br></li></h3><br></li>
             
 <li><a hrf><a href="https://sxmyesrz.github.io/frame_triangulos/">Frame tri&aacutengulos</a><br></li></h3><br></li>
+            <br>
+            <h4>PERSONAL</h4>
 
