--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <font color="darkred">
 <body background="butterfly.gif">
-<h1> style="font-family: 'Comic Sans MS';"<marquee>Indice HTML</h1></marquee>
+    <h1 style="font-family: 'Comic Sans MS';"><marquee>Indice HTML</marquee></h1>
 <h2>Estrada Ramírez Samara Yamilet 2IM2</h2>
               </footer>
 <h2>ACTIVIDADES EN CLASE</h2>
