--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <font color="darkred">
 <body background="butterfly.gif">
     <h1 style="font-family: 'Comic Sans MS';"><marquee>Indice HTML</marquee></h1>
-<h2>Estrada Ramírez Samara Yamilet 2IM2</h2>
+<h2 style="font-family: 'Comic Sans MS';">Estrada Ramírez Samara Yamilet 2IM2</h2>
               </footer>
-<h2>ACTIVIDADES EN CLASE</h2>
+<h2 style="font-family: 'Comic Sans MS';">ACTIVIDADES EN CLASE</h2>
         <li><a href="https://sxmyesrz.github.io/Estructura_b_y_texto/">Estructura b&aacutesica y texto</a><br></li><font>
 
 <li><a href="https://sxmyesrz.github.io/lis_y_lin/">Listas y lineas</a><br></li>
@@ -27,10 +27,10 @@
 
 <li><a href="https://sxmyesrz.github.io/menu_frames/">Menú frames</a><br></li>
             <br>
-        <h3>PRACTICAS</h3>
+        <h3 style="font-family: 'Comic Sans MS';">PRACTICAS</h3>
 <li><a hrf><a href="https://sxmyesrz.github.io/continentes/">Continentes</a><br></li></h3><br></li>
             
 <li><a hrf><a href="https://sxmyesrz.github.io/frame_triangulos/">Frame tri&aacutengulos</a><br></li></h3><br></li>
             <br>
-            <h4>PERSONAL</h4>
+            <h4 style="font-family: 'Comic Sans MS';">PERSONAL</h4>
 
