--- a/index.html
+++ b/index.html
@@ -33,4 +33,7 @@
 <li><a hrf><a href="https://sxmyesrz.github.io/frame_triangulos/">Frame tri&aacutengulos</a><br></li></h3><br></li>
             <br>
             <h4 style="font-family: 'Comic Sans MS';">PERSONAL</h4>
+            <li><a hrf><a href="https://sxmyesrz.github.io/sobre_mi/">Un poco sobre m&iacute</a><br></li></h3><br></li>
+
+
 
