--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <h4 style="font-family: 'Comic Sans MS';">PERSONAL</h4>
             <li><a hrf><a href="https://sxmyesrz.github.io/sobre_mi/">Un poco sobre m&iacute</a><br></li></h3><br></li>
             <li><a hrf><a href="https://sxmyesrz.github.io/mi_familia/">Mi familia</a><br></li></h3><br></li>
+            <li><a hrf><a href="https://sxmyesrz.github.io/mis_amigos/">Mis amigos</a><br></li></h3><br></li>
+
 
 
 
