--- a/frame menu.html
+++ b/frame menu.html
@@ -5,7 +5,7 @@
 
 <frameset cols="40%,*">
 <frame src="https://sxmyesrz.github.io/menu/">
-<frame src="" name="contenido">
+<frame src="" name="menu">
 
 </frameset>
 </html>
