--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 </head>
 
 <frameset cols="30%,*">
+<frameset rows="30%,*">  
 <frame src="menu.html">
-<frame src="" name="menu">
+<frame src="">
+</frameset>
+<frame src="cer.gif" name="menu">
 
 </frameset>
 </html>
