--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 <frameset cols="30%,*">
 <frameset rows="30%,*">  
+<frame src="video.html">
 <frame src="menu.html">
-<frame src="">
 </frameset>
-<frame src="cer.gif" name="menu">
+<frame src="fon.gif" name="menu">
 
 </frameset>
 </html>
