--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <title>video</title>
 </head>
 <body>
-<body background="fon.gif">
+<body background="cer.gif" width="200">
 <video src="sxm.mp4" width="200" controls></video>
 </body>
 </html>
