--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <frame src="video.html">
 <frame src="menu.html">
 </frameset>
-<frame src="fon.gif" name="menu">
+<frame src="fon.gif" width="400" name="menu">
 </frameset>
 </html>
