--- a/video.html
+++ b/video.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <body background="cer.gif" width="200">
-<video src="sxm.mp4" width="200" controls></video>
+<center>
+<video src="sxm.mp4" width="300" controls></video>
+</center>
 </body>
 </html>
