--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <frame src="video.html">
 <frame src="menu.html">
 </frameset>
-<frame src="fon.gif" width="400" name="menu">
+<center>
+<frame src="fon.gif" width="800" </center> name="menu">
 </frameset>
 </html>
