--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <frame src="menu.html">
 </frameset>
 <center>
-<frame src="fon.gif" width="800" </center> name="menu">
+<frame src="fon.gif" width="800" name="menu">
+  </center>
 </frameset>
 </html>
